--- a/index.html
+++ b/index.html
@@ -70,11 +70,16 @@
             <div>
                 <h2>Contact</h2>
                 <form action="">
-                    <input type="text" placeholder="Name" name="name">
+                    <div>
+                    <input type="text" placeholder="First Name" name="name">
                     <input type="text" placeholder="Last name" name="last-name">
+                    </div>
+                    <div>
                     <input type="text" placeholder="Phone" name="phone">
                     <input type="text" placeholder="Email" name="email">
+                    </div>
                     <textarea  placeholder="Message" name="message" id=""></textarea>
+                    <br>
                     <button>Send</button>
                 </form>
             </div>
