--- a/index.html
+++ b/index.html
@@ -5,6 +5,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, instal-scale_1.0">
     <title>Eduardo Sarapura</title>
+    <link rel="stylesheet" href="../../index.css">
+    <style>
+        body{
+            background-color: black;
+            color: green;
+            font-family: monospace;
+            }
+        main{
+            text-align: center;
+        }
+
+        h1{
+            color:red
+        }
+    </style>
 </head>
 
 <body>
