--- a/index.html
+++ b/index.html
@@ -7,23 +7,42 @@
     <title>Eduardo Sarapura</title>
     <link rel="stylesheet" href="../../index.css">
     <style>
-        body{
+        body {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            min-height: 100dvh;
+            margin: 0;
             background-color: black;
-            color: green;
+            color: black;
             font-family: monospace;
-            }
-        main{
-            text-align: center;
         }
 
-        h1{
-            color:red
+        main {
+            max-width: 300px;
+            border-radius: 8px;
+            text-align: center;
+            background-color: green;
+        }
+
+        h1 {
+            color: rgb(145, 255, 0)
+        }
+
+        ul {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 8px;
         }
     </style>
 </head>
 
 <body>
-    <header>
+    <!-- <header>
         <nav>
             <div>
                 <a href="#">
@@ -44,20 +63,44 @@
                 <a href="#Contact">Contact</a>
             </div>
         </nav>
-    </header>
+    </header>-->
     <main>
         <article>
             <div>
                 <h2>Financial Controller</h2>
-                <h1>Eduardo</h1>
-                <p>
-                    Analista en Planificación Financiera, Presupuestos, Costos y Control de Gestión
-                </p>
-                <a href="#">Contact here</a>
+                <!-- <a href="#">Contact here</a>-->
             </div>
-            <img src="https://scontent.flim6-4.fna.fbcdn.net/v/t39.30808-6/434329642_7453432808057279_8616039592342304690_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=6ee11a&_nc_eui2=AeHOhFweRlqymfsMrRpGwL2rnMgZAY-RgpGcyBkBj5GCkR-S7KWDsLYmvDWIN_qA81JY9hgEHJIkL7TUckJxbnY-&_nc_ohc=lq9W-MRTd9sQ7kNvwFu9PGl&_nc_oc=Adkv2T8TU6wNAKusOOqAcjL9eV1U86aB45v4V5gKQ_u_ZJSbdM9kD-epPZy-jyCW_Aw&_nc_zt=23&_nc_ht=scontent.flim6-4.fna&_nc_gid=O1-9cAQ4WCNo5vqodlwWNA&oh=00_AfPHRsoJ-J2XfhS0fYRgqicyOBtzemJ2-UjxccP6O0u_ow&oe=685FD489" alt="EJSC" width="200">
+            <img src="https://scontent.flim6-4.fna.fbcdn.net/v/t39.30808-6/434329642_7453432808057279_8616039592342304690_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=6ee11a&_nc_eui2=AeHOhFweRlqymfsMrRpGwL2rnMgZAY-RgpGcyBkBj5GCkR-S7KWDsLYmvDWIN_qA81JY9hgEHJIkL7TUckJxbnY-&_nc_ohc=lq9W-MRTd9sQ7kNvwFu9PGl&_nc_oc=Adkv2T8TU6wNAKusOOqAcjL9eV1U86aB45v4V5gKQ_u_ZJSbdM9kD-epPZy-jyCW_Aw&_nc_zt=23&_nc_ht=scontent.flim6-4.fna&_nc_gid=O1-9cAQ4WCNo5vqodlwWNA&oh=00_AfPHRsoJ-J2XfhS0fYRgqicyOBtzemJ2-UjxccP6O0u_ow&oe=685FD489"
+                alt="EJSC" width="150">
+            <h1>Eduardo Sarapura</h1>
+            <p>
+                Analista en Planificación Financiera, Presupuestos, Costos y Control de Gestión, Formular, calcular y
+                actualizar la estructura de costos para la implementación de nuevas fiscalías requeridas a nivel
+                nacional
+            </p>
+            <ul>
+                <li>Excel VBA </li>
+                <li>SQL</li>
+                <li>Power BI</li>
+                <li>Phyton</li>
+            </ul>
+            <ul>
+                <li>
+                    <a href="https://www.youtube.com/@eduardojaviersarapuracoron8461">YouTube</a>
+                </li>
+                <li>
+                    <a href="https://github.com/EDUARDOSARAPURA">GitHub</a>
+                </li>
+                <li>
+                    <a href="https://www.linkedin.com/in/eduardo-javier-sarapura-coronel-0b4aab57/">LinkedIn</a>
+                </li>
+                <li>
+                    <a href="https://www.instagram.com/eduardo.sarapura/">Instagram</a>
+                </li>
+
+            </ul>
         </article>
-        <section>
+        <!-- <section>
             <div>
                 <h2>Experience</h2>
                 <ul>
@@ -98,7 +141,7 @@
                     <button>Send</button>
                 </form>
             </div>
-        </section>
+        </section>-->
     </main>
 </body>
 
