--- a/index.html
+++ b/index.html
@@ -5,39 +5,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, instal-scale_1.0">
     <title>Eduardo Sarapura</title>
-    <link rel="stylesheet" href="../../index.css">
+    <link rel="stylesheet" href="../css/index.css">
     <style>
-        body {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            min-height: 100dvh;
-            margin: 0;
-            background-color: black;
-            color: black;
-            font-family: monospace;
-        }
-
-        main {
-            max-width: 300px;
-            border-radius: 8px;
-            text-align: center;
-            background-color: green;
-        }
-
-        h1 {
-            color: rgb(145, 255, 0)
-        }
-
-        ul {
-            list-style: none;
-            padding: 0;
-            margin: 0;
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 8px;
-        }
     </style>
 </head>
 
