--- a/index.html
+++ b/index.html
@@ -36,35 +36,35 @@
     <main>
         <article>
             <div>
-                <h2>Financial Controller</h2>
+                <h2 class="title1">💻 Financial Controller</h2>
                 <!-- <a href="#">Contact here</a>-->
             </div>
-            <img src="https://scontent.flim6-4.fna.fbcdn.net/v/t39.30808-6/434329642_7453432808057279_8616039592342304690_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=6ee11a&_nc_eui2=AeHOhFweRlqymfsMrRpGwL2rnMgZAY-RgpGcyBkBj5GCkR-S7KWDsLYmvDWIN_qA81JY9hgEHJIkL7TUckJxbnY-&_nc_ohc=lq9W-MRTd9sQ7kNvwFu9PGl&_nc_oc=Adkv2T8TU6wNAKusOOqAcjL9eV1U86aB45v4V5gKQ_u_ZJSbdM9kD-epPZy-jyCW_Aw&_nc_zt=23&_nc_ht=scontent.flim6-4.fna&_nc_gid=O1-9cAQ4WCNo5vqodlwWNA&oh=00_AfPHRsoJ-J2XfhS0fYRgqicyOBtzemJ2-UjxccP6O0u_ow&oe=685FD489"
-                alt="EJSC" width="150">
-            <h1>Eduardo Sarapura</h1>
-            <p>
+            <img src="https://scontent.flim22-2.fna.fbcdn.net/v/t39.30808-6/464912557_8686741251393089_2607746904257390479_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=cf85f3&_nc_eui2=AeEBSRpQQvoNxIjilIBV_P-G_ciu6oiYrvn9yK7qiJiu-aMqqXetT7DpS-JQJuaQE6QV12lSnImjywLtYcjKui9x&_nc_ohc=cFbB-6wQQRIQ7kNvwGsZDbG&_nc_oc=AdmtmvSrxue-clufifSeH9KsaInRqCckj2sutCnl8d25rxIhLufuhQK1eewx02copYQ&_nc_zt=23&_nc_ht=scontent.flim22-2.fna&_nc_gid=Vj5gJi8f9DofTUm5ca9NjA&oh=00_AfOH6_4tG2i-1VEWIJ7iDN1-EeEN81RjlfPUYzCOicgoWQ&oe=686BAFE3"
+                class="imga" alt="EJSC" width="150">
+            <h1 class="title2">Eduardo Sarapura</h1>
+            <p class="parr2">
                 Analista en Planificación Financiera, Presupuestos, Costos y Control de Gestión, Formular, calcular y
-                actualizar la estructura de costos para la implementación de nuevas fiscalías requeridas a nivel
-                nacional
+                actualizar la estructura de costos para la implementación de nuevas unidades de negocios a nivel
+                nacional.
             </p>
-            <ul>
-                <li>Excel VBA </li>
-                <li>SQL</li>
-                <li>Power BI</li>
-                <li>Phyton</li>
+            <ul class="list">
+                <li class="badge">📊 Excel VBA 💾</li>
+                <li class="badge">📃 SQL 📂</li>
+                <li class="badge">📈 Power BI 📉</li>
+                <li class="badge">🐍 Phyton 📚</li>
             </ul>
             <ul>
                 <li>
-                    <a href="https://www.youtube.com/@eduardojaviersarapuracoron8461">YouTube</a>
+                    <a class="lin" href="https://www.youtube.com/@eduardojaviersarapuracoron8461">YouTube</a>
                 </li>
                 <li>
-                    <a href="https://github.com/EDUARDOSARAPURA">GitHub</a>
+                    <a class="lin" href="https://github.com/EDUARDOSARAPURA">GitHub</a>
                 </li>
                 <li>
-                    <a href="https://www.linkedin.com/in/eduardo-javier-sarapura-coronel-0b4aab57/">LinkedIn</a>
+                    <a class="lin" href="https://www.linkedin.com/in/eduardo-javier-sarapura-coronel-0b4aab57/">LinkedIn</a>
                 </li>
                 <li>
-                    <a href="https://www.instagram.com/eduardo.sarapura/">Instagram</a>
+                    <a class="lin" href="https://www.instagram.com/eduardo.sarapura/">Instagram</a>
                 </li>
 
             </ul>
