--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
                     <a class="lin" href="https://github.com/EDUARDOSARAPURA">GitHub</a>
                 </li>
                 <li>
-                    <a class="lin" href="https://www.linkedin.com/in/eduardo-javier-sarapura-coronel-0b4aab57/">LinkedIn</a>
+                    <a class="lin"
+                        href="https://www.linkedin.com/in/eduardo-javier-sarapura-coronel-0b4aab57/">LinkedIn</a>
                 </li>
                 <li>
                     <a class="lin" href="https://www.instagram.com/eduardo.sarapura/">Instagram</a>
